--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
 				<div class="ui-body">
 					<p>Sample text sample text</p>
+					<img src="resources/totaltickets.gif" alt="Total Tickets">
 				</div>
 			</div>
 
@@ -70,12 +71,18 @@
 		<div data-role="header" data-add-back-btn="true">
 			<h1>Hallo this is 2009</h1>
 		</div>
+		<div data-role="content">
+			<p>This is the year 2009</p>
+		</div>
 	</div>
 
 	<!-- 2010 Page -->
 	<div data-role="page" id="page-2010" data-add-back-btn="true">
 		<div data-role="header" data-add-back-btn="true">
 			<h1>Hello this is 2010</h1>
+		</div>
+		<div data-role="content">
+			</p>This is the year 2010</p>
 		</div>
 	</div>
 
