--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 			<h1>2015</h1>
 		</div>
 		<div data-role="content">
-			</p>This is the year 2015. This is the current year.</p>
+			</p>This is the year 2015</p>
 		</div>		
 	</div>
 </body>
