Image sizing test

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 
 				<div class="ui-body">
 					<p>Sample text sample text</p>
-					<img src="resources/totaltickets.gif" alt="Total Tickets">
+					<div class="image">
+						<img src="resources/totaltickets.gif" alt="Total Tickets">
+					</div>
 				</div>
 			</div>
 
