--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
 	<script src="js/jquery-1.11.1.min.js"></script>
 	<script src="js/jquery.mobile-1.4.5.min.js"></script>
-	<script src="js/jquery.imagefit.js"></script>
 </head>
 
 <body>
@@ -45,7 +44,7 @@
 				<div class="ui-body">
 					<p>Sample text sample text</p>
 					<div class="image">
-						<img src="resources/totaltickets.gif" alt="Total Tickets">
+						<img src="resources/totaltickets.gif" alt="Total Tickets" width="100%" height="100%">
 					</div>
 				</div>
 			</div>
@@ -67,8 +66,6 @@
 			</div>
 		</div>
 	</div>
-
-
 
 	<!-- 2009 Page -->
 	<div data-role="page" id="page-2009" data-add-back-btn="true">
