--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Zndex</title>
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
+	<link rel="stylesheet" href="css/custom.css" />
 	<script src="js/jquery-1.11.1.min.js"></script>
 	<script src="js/jquery.mobile-1.4.5.min.js"></script>
 </head>
@@ -23,7 +24,7 @@
 			
 			<!-- Home -->
 			<div id="home" class="ui-content">
-				<h3 class="ui-bar ui-bar-a ui-corner-all">Home Content</h3>
+				<h4 class="ui-bar ui-bar-a ui-corner-all">Home Content</h4>
 				<div class="ui-body">
 					<ul data-role="listview">
 						<li><a href="#page-2009">2009</a></li>
@@ -39,7 +40,7 @@
 			
 			<!-- Sales -->
 			<div id="sales" class="ui-content">
-				<h1 class="ui-bar ui-bar-a ui-corner-all">Sales</h1>
+				<h4 class="ui-bar ui-bar-a ui-corner-all headers">Sales sample sample sample </h4>
 
 				<div class="ui-body">
 					<p>Sample text sample text</p>
@@ -51,7 +52,7 @@
 
 			<!-- Three -->
 			<div id="three" class="ui-content">
-				<h1 class="ui-bar ui-bar-a ui-corner-all">Three</h1>
+				<h4 class="ui-bar ui-bar-a ui-corner-all">Three</h4>
 				<div class="ui-body">
 					<p>Sample text sample text</p>
 				</div>
@@ -59,7 +60,7 @@
 
 			<!-- Four -->
 			<div id="four" class="ui-content">
-				<h1 class="ui-bar ui-bar-a ui-corner-all">Four</h1>
+				<h4 class="ui-bar ui-bar-a ui-corner-all">Four</h4>
 				<div class="ui-body">
 					<p>Sample text sample text</p>
 				</div>
