--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 	<title>Zndex</title>
-	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
+	<meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
 	<link rel="stylesheet" href="css/custom.css" />
 	<script src="js/jquery-1.11.1.min.js"></script>
 	<script src="js/jquery.mobile-1.4.5.min.js"></script>
+	<script src="js/custom.js"></script>
 </head>
 
 <body>
