--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Zndex</title>
-	<meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0">
+	<meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=yes">
 	<link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
 	<link rel="stylesheet" href="css/custom.css" />
 	<script src="js/jquery-1.11.1.min.js"></script>
